--- a/src/sass/organisms/footer/_footer.scss
+++ b/src/sass/organisms/footer/_footer.scss
@@ -15,6 +15,8 @@ $footer: '.footer';
 // --------------------------------------------------
 #{$footer} {
     @include size( 100% auto );
+
+    background-color: getColor( white );
 }
 
 
